SERVER-2009 don't skip location on yield recovery when the location has already been updated